# multi_drones

./: .gitignore  README.md
ar_recog/src/: ar_recog.cpp
multi_drone_ekf/: CMakeLists.txt  FindRanav.cmake  mainpage.dox  manifest.xml
multi_drone_ekf/config/: object_4x4
multi_drone_ekf/include/multi_drone_ekf/: Ardrone.h  ArdroneRosSync.h  Ardronecontroller.h  Camera.h  EKF.h  MultiAgent3dNavigation.h  PIDcontroller.h  marker2dsensormodel.h  marker3dsensormodel.h  motionmodel.h  rotor2Dmotionmodel.h  rotor3Dmotionmodel.h  rotor3dmotionmodel.h  sensormodel.h
multi_drone_ekf/launch/: ar_new_pose_drone.launch  ar_new_pose_kinect.launch  ar_recog.launch  ar_recog_drone.launch  ar_recog_kinect.launch  drone.launch
multi_drone_ekf/src/: Ardrone.cpp  ArdroneRosSync.cpp  Ardronecontroller.cpp  Camera.cpp  EKF.cpp  MultiAgent3dNavigation.cpp  PIDcontroller.cpp  main.cpp  main_control.cpp  marker2dsensormodel.cpp  marker3dsensormodel.cpp  motionmodel.cpp  random.cpp  rotor2Dmotionmodel.cpp  rotor3Dmotionmodel.cpp  rotor3dmotionmodel.cpp  sensormodel.cpp
multi_drone_ekf/src/old/: marker2dsensormodel.h  rotor2Dmotionmodel.cpp  rotor2Dmotionmodel.h
target_tracking/: build.sh  multi.ini
target_tracking/src/: .gitignore  CMakeLists.txt  FindNLopt.cmake  kr_mod.xml
target_tracking/src/estimation/: CMakeLists.txt  ekf.cpp  ekf.h  motionmodel.cpp  motionmodel.h  sensormodel.h
target_tracking/src/multi_rotor_control/: CMakeLists.txt  cam2dsensormodel.cpp  cam2dsensormodel.h  main_test_multi.cpp  multiagentmotionmodel.h  multiagentsensormodel.h  point2dmotionmodel.cpp  point2dmotionmodel.h  rel2dsensormodel.cpp  rel2dsensormodel.h  rotor2dmotionmodel.cpp  rotor2dmotionmodel.h  targettrackingcontroller.cpp  targettrackingcontroller.h  targettrajectory.cpp  targettrajectory.h  topology.cpp  topology.h
target_tracking/src/utils/: CMakeLists.txt  time_utils.cpp  time_utils.h  tparam.cpp  tparam.h  variant.cpp  variant.h
